# portage-hook-ctrl

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  config.d.in  main.d
libs/: CMakeLists.txt
src/: CMakeLists.txt
src/portage/: hook.d  hook_database.d
src/utils/: filesystem.d
tests/: CMakeLists.txt
tests/assets/test/: test  test.hook
tests/tests/: config.d.in  filesystem_tests.d  hook_tests.d  main.d
